[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/JoinGameDialog.gd" type="Script" id=1]

[node name="PanelContainer" type="PanelContainer"]
margin_right = 14.0
margin_bottom = 14.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 97.0
margin_bottom = 117.0

[node name="PartyIdInputLabel" type="MarginContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_right = 90.0
margin_bottom = 14.0
custom_constants/margin_bottom = 0

[node name="Label" type="Label" parent="VBoxContainer/PartyIdInputLabel"]
margin_right = 90.0
margin_bottom = 14.0
text = "Enter Party Id:"

[node name="PartyIdInput" type="MarginContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 18.0
margin_right = 90.0
margin_bottom = 42.0

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/PartyIdInput"]
margin_right = 90.0
margin_bottom = 24.0

[node name="JoinGameButton" type="MarginContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 46.0
margin_right = 90.0
margin_bottom = 76.0
custom_constants/margin_top = 10

[node name="Button" type="Button" parent="VBoxContainer/JoinGameButton"]
margin_top = 10.0
margin_right = 90.0
margin_bottom = 30.0
text = "Join Game"

[node name="CancelJoinButton" type="MarginContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 80.0
margin_right = 90.0
margin_bottom = 110.0
custom_constants/margin_top = 10

[node name="Button" type="Button" parent="VBoxContainer/CancelJoinButton"]
margin_top = 10.0
margin_right = 90.0
margin_bottom = 30.0
text = "Cancel"
